--- a/.tmux.conf
+++ b/.tmux.conf
@@ -91,6 +91,14 @@ bind C-o run-shell "open $(tmux show-buffer)"
 # Pipe pane to log file
 bind-key P pipe-pane -o "cat >>$HOME/#W-tmux.log" \; display-message "Toggled logging to $HOME/#W-tmux.log"
 
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
 # OSX Clipboard support
 source ~/.tmux.clipboard
 bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
@@ -103,7 +111,7 @@ bind C-y run "tmux save-buffer - | xclip -i -selection clipboard"
 #### COLOUR (Solarized dark)
 
 # Set 256 colors
-set -g default-terminal "screen-256color" 
+set -g default-terminal "screen-256color"
 
 # default statusbar colors
 set-option -g status-bg colour235 #base02
