--- a/.tmux.conf
+++ b/.tmux.conf
@@ -101,6 +101,7 @@ bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # OSX Clipboard support
 source ~/.tmux.clipboard
+set-option -g default-command 'command -v reattach-to-user-namespace >/dev/null && exec reattach-to-user-namespace -l "$SHELL" || exec "$SHELL"'
 bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
 bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 
