Add 80 Char binding
FossilOrigin-Name: 81a9a769530fcf2ef5a00d2be8445829415dd56079595fec123149ef057388c0

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -59,6 +59,9 @@ bind-key -r K resize-pane -U 5
 bind-key -r H resize-pane -L 5
 bind-key -r L resize-pane -R 5
 
+# Make current pane exactly 80 Chars wide
+bind-key -r E resize-pane -x 80
+
 # Select specific pane
 bind-key / display-panes \; select-pane -t :.
 
