--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,9 @@
 # # act like GNU screen
-unbind C-b
-set -g prefix C-a
-# Allow C-A a to send C-A to application
-bind C-a last-window
-bind-key a send-prefix
+# unbind C-b
+# set -g prefix C-a
+# # Allow C-A a to send C-A to application
+# bind C-a last-window
+# bind-key a send-prefix
 
 # start window index of 1
 set-option -g base-index 1
@@ -13,10 +13,10 @@ setw -g pane-base-index 1
  set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # UTF-8
-set-option -g status-utf8 on
+# set-option -g status-utf8 on
 
 #supposedly fixes pausing in vim
-set-option -sg escape-time 1
+# set-option -sg escape-time 1
 
 
 # set-window-option -g mode-mouse on
@@ -25,16 +25,16 @@ set-option -sg escape-time 1
 # set-option -g mouse-select-window on
 
 # act like vim
-set -g status-keys vi
-set-window-option -g mode-keys vi
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
+# set -g status-keys vi
+# set-window-option -g mode-keys vi
+# bind h select-pane -L
+# bind j select-pane -D
+# bind k select-pane -U
+# bind l select-pane -R
+# bind-key -r C-h select-window -t :-
+# bind-key -r C-l select-window -t :+
 
-set -g history-limit 5000
+# set -g history-limit 5000
 
 setw -g xterm-keys on
 
@@ -45,8 +45,8 @@ setw -g aggressive-resize on
 
 # # Rebinding the pane splitting bindings
 # unbind % # Remove default bindings since we're replacing
-bind | split-window -h
-bind - split-window -v
+# bind | split-window -h
+# bind - split-window -v
 
 # # Set window notifications
 setw -g monitor-activity on
@@ -54,10 +54,10 @@ set -g visual-activity on
 
 # panes
 # Resize panes
-bind-key -r J resize-pane -D 5
-bind-key -r K resize-pane -U 5
-bind-key -r H resize-pane -L 5
-bind-key -r L resize-pane -R 5
+# bind-key -r J resize-pane -D 5
+# bind-key -r K resize-pane -U 5
+# bind-key -r H resize-pane -L 5
+# bind-key -r L resize-pane -R 5
 
 # Make current pane exactly 80 Chars wide
 bind-key -r E resize-pane -x 80
@@ -70,15 +70,19 @@ bind-key -r R rotate-window -U
 
 # statusbar --------------------------------------------------------------
 
+set -g status-right "#{online_status} | #{cpu_icon}#{cpu_percentage} | B:#{battery_percentage} | %a %h-%d %H:%M "
+set -g status-right-length 40
+
+
 
 # # Refresh the status bar every 30 seconds.
-set-option -g status-interval 30
+# set-option -g status-interval 30
 
 # # The status bar itself.
-set -g status-justify left
-set -g status-left-length 40
+# set -g status-justify left
+# set -g status-left-length 40
 
-set-option -g display-time 1000
+# set-option -g display-time 1000
 
 # Reload source file
 bind-key r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
@@ -89,10 +93,10 @@ bind-key r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
 bind-key S setw synchronize-panes
 
 # Show url in buffer
-bind C-o run-shell "open $(tmux show-buffer)"
+# bind C-o run-shell "open $(tmux show-buffer)"
 
 # Pipe pane to log file
-bind-key P pipe-pane -o "cat >>$HOME/#W-tmux.log" \; display-message "Toggled logging to $HOME/#W-tmux.log"
+# bind-key P pipe-pane -o "cat >>$HOME/#W-tmux.log" \; display-message "Toggled logging to $HOME/#W-tmux.log"
 
 # Setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
@@ -103,14 +107,14 @@ unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # OSX Clipboard support
-source ~/.tmux.clipboard
-set-option -g default-command 'command -v reattach-to-user-namespace >/dev/null && exec reattach-to-user-namespace -l "$SHELL" || exec "$SHELL"'
-bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
-bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+# source ~/.tmux.clipboard
+# set-option -g default-command 'command -v reattach-to-user-namespace >/dev/null && exec reattach-to-user-namespace -l "$SHELL" || exec "$SHELL"'
+# bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
+# bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 
-# Linux clipboard support
-bind C-p run "tmux set-buffer \"$(xclip -o -selection clipboard)\"; tmux paste-buffer"
-bind C-y run "tmux save-buffer - | xclip -i -selection clipboard"
+# # Linux clipboard support
+# bind C-p run "tmux set-buffer \"$(xclip -o -selection clipboard)\"; tmux paste-buffer"
+# bind C-y run "tmux save-buffer - | xclip -i -selection clipboard"
 
 #### COLOUR (Solarized dark)
 
@@ -146,3 +150,32 @@ set-option -g display-panes-colour colour196 #orange
 
 # clock
 set-window-option -g clock-mode-colour colour40 #green
+
+
+### Plugins
+
+# List of plugins
+# Supports `github_username/repo` or full git repo URLs
+set -g @tpm_plugins '              \
+  tmux-plugins/tpm                 \
+  tmux-plugins/tmux-sensible       \
+  tmux-plugins/tmux-resurrect      \
+  tmux-plugins/tmux-resurrect-auto \
+  tmux-plugins/tmux-cpu \
+  tmux-plugins/tmux-battery \
+  tmux-plugins/tmux-yank \
+  tmux-plugins/tmux-online-status \
+  tmux-plugins/tmux-open \
+  tmux-plugins/tmux-copycat \
+  tmux-plugins/tmux-sidebar \
+  tmux-plugins/tmux-logging \
+  tmux-plugins/tmux-pain-control \
+'
+# Other examples:
+# github_username/plugin_name    \
+# git@github.com/user/plugin     \
+# git@bitbucket.com/user/plugin  \
+
+# Initializes TMUX plugin manager.
+# Keep this line at the very bottom of tmux.conf.
+run-shell '~/.tmux/plugins/tpm/tpm'
