--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,7 +10,7 @@ set-option -g base-index 1
 setw -g pane-base-index 1
 
 # sane scrolling
- set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
+set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # UTF-8
 # set-option -g status-utf8 on
@@ -99,12 +99,12 @@ bind-key S setw synchronize-panes
 # bind-key P pipe-pane -o "cat >>$HOME/#W-tmux.log" \; display-message "Toggled logging to $HOME/#W-tmux.log"
 
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# unbind -t vi-copy Enter
+# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # OSX Clipboard support
 # source ~/.tmux.clipboard
@@ -115,6 +115,9 @@ bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 # # Linux clipboard support
 # bind C-p run "tmux set-buffer \"$(xclip -o -selection clipboard)\"; tmux paste-buffer"
 # bind C-y run "tmux save-buffer - | xclip -i -selection clipboard"
+
+# Get prefix to C-a, vi keys, and mouseing
+set -g @almost-sensible 'on'
 
 #### COLOUR (Solarized dark)
 
