--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,9 @@
 # # act like GNU screen
-# unbind C-b
-# set -g prefix C-a
-# # Allow C-A a to send C-A to application
-# bind C-a last-window
-# bind-key a send-prefix
+unbind C-b
+set -g prefix C-a
+# Allow C-A a to send C-A to application
+bind C-a last-window
+bind-key a send-prefix
 
 # start window index of 1
 set-option -g base-index 1
@@ -157,22 +157,24 @@ set-window-option -g clock-mode-colour colour40 #green
 
 ### Plugins
 
+set -g @continuum-boot 'on'
+
 # List of plugins
 # Supports `github_username/repo` or full git repo URLs
-set -g @tpm_plugins '              \
-  tmux-plugins/tpm                 \
-  tmux-plugins/tmux-sensible       \
-  tmux-plugins/tmux-resurrect      \
-  tmux-plugins/tmux-resurrect-auto \
-  tmux-plugins/tmux-cpu \
-  tmux-plugins/tmux-battery \
-  tmux-plugins/tmux-yank \
+set -g @tpm_plugins '             \
+  tmux-plugins/tpm                \
+  tmux-plugins/tmux-sensible      \
+  tmux-plugins/tmux-resurrect     \
+  tmux-plugins/tmux-continuum     \
+  tmux-plugins/tmux-cpu           \
+  tmux-plugins/tmux-battery       \
+  tmux-plugins/tmux-yank          \
   tmux-plugins/tmux-online-status \
-  tmux-plugins/tmux-open \
-  tmux-plugins/tmux-copycat \
-  tmux-plugins/tmux-sidebar \
-  tmux-plugins/tmux-logging \
-  tmux-plugins/tmux-pain-control \
+  tmux-plugins/tmux-open          \
+  tmux-plugins/tmux-copycat       \
+  tmux-plugins/tmux-sidebar       \
+  tmux-plugins/tmux-logging       \
+  tmux-plugins/tmux-pain-control  \
 '
 # Other examples:
 # github_username/plugin_name    \
