Adding Sessionist to tmux
FossilOrigin-Name: 48483834e3d0fe81a2c98ac1ca16131b49a72ec46ca88e1b2a4a70a39fe4a1bd

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -175,7 +175,9 @@ set -g @tpm_plugins '             \
   tmux-plugins/tmux-sidebar       \
   tmux-plugins/tmux-logging       \
   tmux-plugins/tmux-pain-control  \
+  tmux-plugins/tmux-sessionist    \
 '
+
 # Other examples:
 # github_username/plugin_name    \
 # git@github.com/user/plugin     \
