Adding some git ignores
FossilOrigin-Name: aa82700fa1f8209052bc968f218fed45e51b58788042f143a8d9e90325a3ec02

--- a/.gitconfig
+++ b/.gitconfig
@@ -5,7 +5,8 @@
 [core]
   autocrlf = input
   whitespace = fix,space-before-tab,tab-in-indent,trailing-space
-	excludesfile = /Users/patrick.regan/.gitignore_global
+	excludesfile = /Users/patrick.regan/.gitignore
+	editor = vim
 [apply]
   whitespace = fix
 [alias]
@@ -67,6 +68,6 @@
   main-window-view = HistoryView
   file-view-vpane-position = 1012
 [push]
-  default = simple
+	default = current
 [init]
   templatedir = ~/.git_template
