--- a/.tmux.conf
+++ b/.tmux.conf
@@ -70,10 +70,8 @@ bind-key -r R rotate-window -U
 
 # statusbar --------------------------------------------------------------
 
-set -g status-right "#{online_status} | #{cpu_icon}#{cpu_percentage} | B:#{battery_percentage} | %a %h-%d %H:%M "
+set -g status-right "%a %h-%d %H:%M "
 set -g status-right-length 40
-
-
 
 # # Refresh the status bar every 30 seconds.
 # set-option -g status-interval 30
@@ -91,33 +89,6 @@ bind-key r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
 
 # Toggle send to all
 bind-key S setw synchronize-panes
-
-# Show url in buffer
-# bind C-o run-shell "open $(tmux show-buffer)"
-
-# Pipe pane to log file
-# bind-key P pipe-pane -o "cat >>$HOME/#W-tmux.log" \; display-message "Toggled logging to $HOME/#W-tmux.log"
-
-# Setup 'v' to begin selection as in Vim
-# bind-key -t vi-copy v begin-selection
-# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Update default binding of `Enter` to also use copy-pipe
-# unbind -t vi-copy Enter
-# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-
-# OSX Clipboard support
-# source ~/.tmux.clipboard
-# set-option -g default-command 'command -v reattach-to-user-namespace >/dev/null && exec reattach-to-user-namespace -l "$SHELL" || exec "$SHELL"'
-# bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
-# bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-
-# # Linux clipboard support
-# bind C-p run "tmux set-buffer \"$(xclip -o -selection clipboard)\"; tmux paste-buffer"
-# bind C-y run "tmux save-buffer - | xclip -i -selection clipboard"
-
-# Get prefix to C-a, vi keys, and mouseing
-set -g @almost-sensible 'on'
 
 #### COLOUR (Solarized dark)
 
@@ -156,33 +127,31 @@ set-window-option -g clock-mode-colour colour40 #green
 
 
 ### Plugins
+run-shell "~/.tmux/plugins/tundle/tundle"
 
-set -g @continuum-boot 'on'
+#### Continuum
+setenv -g @bundle "chilicuil/tundle-plugins/tmux-continuum"
+setenv -g @continuum-restore 'on'
 
-# List of plugins
-# Supports `github_username/repo` or full git repo URLs
-set -g @tpm_plugins '             \
-  tmux-plugins/tpm                \
-  tmux-plugins/tmux-sensible      \
-  tmux-plugins/tmux-resurrect     \
-  tmux-plugins/tmux-continuum     \
-  tmux-plugins/tmux-cpu           \
-  tmux-plugins/tmux-battery       \
-  tmux-plugins/tmux-yank          \
-  tmux-plugins/tmux-online-status \
-  tmux-plugins/tmux-open          \
-  tmux-plugins/tmux-copycat       \
-  tmux-plugins/tmux-sidebar       \
-  tmux-plugins/tmux-logging       \
-  tmux-plugins/tmux-pain-control  \
-  tmux-plugins/tmux-sessionist    \
-'
+#### Resurrect
+setenv -g @bundle "chilicuil/tundle-plugins/tmux-resurrect"
 
-# Other examples:
-# github_username/plugin_name    \
-# git@github.com/user/plugin     \
-# git@bitbucket.com/user/plugin  \
+#### Copycat
+setenv -g @bundle "chilicuil/tundle-plugins/tmux-copycat"
 
-# Initializes TMUX plugin manager.
-# Keep this line at the very bottom of tmux.conf.
-run-shell '~/.tmux/plugins/tpm/tpm'
+#### Logging
+setenv -g @bundle "chilicuil/tundle-plugins/tmux-logging"
+
+#### Open
+setenv -g @bundle "chilicuil/tundle-plugins/tmux-open"
+
+#### Pain-control
+setenv -g @bundle "chilicuil/tundle-plugins/tmux-pain-control"
+
+#### Sensible
+setenv -g @bundle "chilicuil/tundle-plugins/tmux-sensible"
+
+#### Yank
+setenv -g @bundle "chilicuil/tundle-plugins/tmux-yank"
+
+
