Make Tmux look like papercolour theme
FossilOrigin-Name: 1b1473dafe6ea4f7f3c9811b8877be003b2d7b65427eaea15c1074896e0da181

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,6 +64,7 @@ bind-key -r R rotate-window -U
 
 # statusbar --------------------------------------------------------------
 
+set -g status-right "%a %h-%d %H:%M "
 set -g status-right-length 40
 
 # # Refresh the status bar every 30 seconds.
@@ -82,6 +83,41 @@ bind-key r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
 
 # Toggle send to all
 bind-key S setw synchronize-panes
+
+#### COLOUR (PaperColor-Dark)
+
+# Set 256 colors
+set -g default-terminal "screen-256color"
+
+# default statusbar colors
+set-option -g status-bg colour237 # Darkest Statusline color
+set-option -g status-fg colour251 # Forground on Statusline
+set-option -g status-attr default
+
+# default window title colors
+set-window-option -g window-status-fg colour237 # Foreground from "Mode Statusline
+set-window-option -g window-status-bg colour37 # Backgrount from "Mode" Statusline
+#set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg default
+set-window-option -g window-status-current-bg colour208 # Background from "Mode" Statusline - TODO
+#set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg colour237 # Darkest Statusline color
+set-option -g pane-active-border-fg colour66 # Divider
+
+# message text
+set-option -g message-bg colour235 # base02
+set-option -g message-fg colour71 # Error/Exception
+
+# pane number display
+set-option -g display-panes-active-colour colour208 # TODO
+set-option -g display-panes-colour colour37 # Mode
+
+# clock
+set-window-option -g clock-mode-colour colour205 # Number
 
 
 ### Plugins
@@ -113,4 +149,3 @@ setenv -g @bundle "chilicuil/tundle-plugins/tmux-sensible"
 setenv -g @bundle "chilicuil/tundle-plugins/tmux-yank"
 
 
-set -g status-right "%a %h-%d %H:%M "
