--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,23 +12,7 @@ setw -g pane-base-index 1
 # sane scrolling
 set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
-# UTF-8
-# set-option -g status-utf8 on
-
-#supposedly fixes pausing in vim
-# set-option -sg escape-time 1
-
-# act like vim
-# set -g status-keys vi
-# set-window-option -g mode-keys vi
-# bind h select-pane -L
-# bind j select-pane -D
-# bind k select-pane -U
-# bind l select-pane -R
-# bind-key -r C-h select-window -t :-
-# bind-key -r C-l select-window -t :+
-
-# set -g history-limit 5000
+set -g history-limit 5000
 
 setw -g xterm-keys on
 
@@ -37,21 +21,9 @@ setw -g xterm-keys on
 # client connected to *that window*. Much more reasonable.
 setw -g aggressive-resize on
 
-# # Rebinding the pane splitting bindings
-# unbind % # Remove default bindings since we're replacing
-# bind | split-window -h
-# bind - split-window -v
-
 # # Set window notifications
 setw -g monitor-activity on
 set -g visual-activity on
-
-# panes
-# Resize panes
-# bind-key -r J resize-pane -D 5
-# bind-key -r K resize-pane -U 5
-# bind-key -r H resize-pane -L 5
-# bind-key -r L resize-pane -R 5
 
 # Make current pane exactly 80 Chars wide
 bind-key -r E resize-pane -x 80
@@ -62,19 +34,14 @@ bind-key / display-panes \; select-pane -t :.
 # Rotate Panes
 bind-key -r R rotate-window -U
 
+set -g automatic-rename on
+
 # statusbar --------------------------------------------------------------
 
-set -g status-right "%a %h-%d %H:%M "
+set -g status-right "#h: %a %h-%d %H:%M "
 set -g status-right-length 40
 
-# # Refresh the status bar every 30 seconds.
-# set-option -g status-interval 30
-
-# # The status bar itself.
-# set -g status-justify left
-# set -g status-left-length 40
-
-# set-option -g display-time 1000
+set-option -g display-time 1000
 
 # Reload source file
 bind-key r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
