Make Status Right show pane title
FossilOrigin-Name: 116674e6c243b2fc2ebe5e0c6721f7a62f62f2cbf60a2a34abf131a7533e8aca

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,7 +38,7 @@ set -g automatic-rename on
 
 # statusbar --------------------------------------------------------------
 
-set -g status-right "#h: %a %h-%d %H:%M "
+set -g status-right "#T: %a %h-%d %H:%M "
 set -g status-right-length 40
 
 set-option -g display-time 1000
