--- a/.gitconfig
+++ b/.gitconfig
@@ -5,7 +5,7 @@
 [core]
   autocrlf = input
   whitespace = fix,space-before-tab,tab-in-indent,trailing-space
-	excludesfile = /Users/patrick.regan/.gitignore
+	excludesfile = /Users/patrick.regan/.gitignore_global
 	editor = vim
 [apply]
   whitespace = fix
