Update git and bash
FossilOrigin-Name: 3a974d3d418f2d5475df711ebcadda1815be385d48d0f99be5f82d39b60cf8bb

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,11 +1,11 @@
 [user]
   name = Patrick Regan
-  email = patrick.regan@salesforce.com
+  email = patrick.rubbs.regan@gmail.com
 	signingkey = 40F40E48C0C97882
 [core]
   autocrlf = input
   whitespace = fix,space-before-tab,tab-in-indent,trailing-space
-	excludesfile = /Users/patrick.regan/.gitignore_global
+	excludesfile = ~/.gitignore_global
 	editor = vim
 [apply]
   whitespace = fix
